// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown default render 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="Dropdown-root"
    >
      <div
        class="Dropdown-anchor"
      >
        Open Dropdown 
        <span
          class="DropdownArrow-root"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown should render menu 1`] = `
<body
  style="overflow: hidden; padding-right: 0px;"
>
  <div
    aria-hidden="true"
    class="Picasso-root"
  >
    <div
      class="Dropdown-root"
    >
      <div
        class="Dropdown-anchor"
      >
        Open Dropdown 
        <span
          class="DropdownArrow-root"
        />
      </div>
    </div>
  </div>
  <div
    class="MuiModal-root"
    role="presentation"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root MuiBackdrop-invisible"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      class="MuiPaper-root MuiPaper-elevation8 MuiPopover-paper"
      role="document"
      style="opacity: 1; transform: scale(1, 1); transition: opacity 0ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,transform 0ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; top: 16px; left: 16px; transform-origin: -16px -16px;"
      tabindex="-1"
    >
      <div
        class="Dropdown-content"
      >
        <ul
          class="MuiList-root"
          role="menu"
        >
          <li
            class="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters"
            role="menuitem"
            tabindex="-1"
          >
            <p
              class="MuiTypography-root Typography-bodyMedium Typography-regular Typography-grey MuiTypography-body1 MenuItem-stringContent"
            >
              Item1
            </p>
          </li>
          <li
            class="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters"
            role="menuitem"
            tabindex="-1"
          >
            <p
              class="MuiTypography-root Typography-bodyMedium Typography-regular Typography-grey MuiTypography-body1 MenuItem-stringContent"
            >
              Item2
            </p>
          </li>
          <li
            class="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters"
            role="menuitem"
            tabindex="-1"
          >
            <p
              class="MuiTypography-root Typography-bodyMedium Typography-regular Typography-grey MuiTypography-body1 MenuItem-stringContent"
            >
              Item3
            </p>
          </li>
        </ul>
      </div>
    </div>
  </div>
</body>
`;

exports[`Dropdown should render menu without focus 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
  <div
    aria-hidden="true"
    class="Picasso-root"
  >
    <div
      class="Dropdown-root"
    >
      <div
        class="Dropdown-anchor"
      >
        Open Dropdown 
        <span
          class="DropdownArrow-root"
        />
      </div>
    </div>
  </div>
  <div
    class="MuiModal-root"
    role="presentation"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root MuiBackdrop-invisible"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      class="MuiPaper-root MuiPaper-elevation8 MuiPopover-paper"
      role="document"
      style="opacity: 1; transform: scale(1, 1); transition: opacity 0ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,transform 0ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; top: 16px; left: 16px; transform-origin: -16px -16px;"
      tabindex="-1"
    >
      <div
        class="Dropdown-content"
      >
        <ul
          class="MuiList-root"
          role="menu"
        >
          <li
            class="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters"
            role="menuitem"
            tabindex="-1"
          >
            <p
              class="MuiTypography-root Typography-bodyMedium Typography-regular Typography-grey MuiTypography-body1 MenuItem-stringContent"
            >
              Item1
            </p>
          </li>
          <li
            class="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters"
            role="menuitem"
            tabindex="-1"
          >
            <p
              class="MuiTypography-root Typography-bodyMedium Typography-regular Typography-grey MuiTypography-body1 MenuItem-stringContent"
            >
              Item2
            </p>
          </li>
          <li
            class="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters"
            role="menuitem"
            tabindex="-1"
          >
            <p
              class="MuiTypography-root Typography-bodyMedium Typography-regular Typography-grey MuiTypography-body1 MenuItem-stringContent"
            >
              Item3
            </p>
          </li>
        </ul>
      </div>
    </div>
  </div>
</body>
`;
